<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddVacationActivity"
    android:padding="32dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vacation_tracker"
            android:textAlignment="center"
            android:textSize="33sp"
            android:layout_margin="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ExtraText">

        <EditText
            android:id="@+id/editTextVacationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_vacation_title"
            android:inputType="text"/>

        <EditText
            android:id="@+id/editTextHotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_hotel_name"
            android:inputType="text"/>

        <EditText
            android:id="@+id/editTextStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_date"
            android:focusable="false"
            android:inputType="date"/>

        <EditText
            android:id="@+id/editTextEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_date"
            android:focusable="false"
            android:inputType="date"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/buttonSaveVacation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"/>

            <Button
                android:id="@+id/buttonViewVacations"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view"/>

        </LinearLayout>
<!--        perhaps additional buttons to clear-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
